LUCENENET-336 Shortcut for Lucene.NET 2.9.1 --> 2.9.2
git-svn-id: https://svn.apache.org/repos/asf/lucene/lucene.net/trunk@911154 13f79535-47bb-0310-9956-ffa450edef68

--- a/C#/src/Lucene.Net/Lucene.Net.csproj
+++ b/C#/src/Lucene.Net/Lucene.Net.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Document\SetBasedFieldSelector.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Index\AbstractAllTermDocs.cs" />
     <Compile Include="Index\AllTermDocs.cs" />
     <Compile Include="Index\BufferedDeletes.cs" />
     <Compile Include="Index\ByteBlockPool.cs" />
