--- a/C#/src/Lucene.Net/Lucene.Net.csproj
+++ b/C#/src/Lucene.Net/Lucene.Net.csproj
@@ -563,6 +563,7 @@
     </Compile>
     <Compile Include="Search\FilterManager.cs" />
     <Compile Include="Search\Function\ByteFieldSource.cs" />
+    <Compile Include="Search\Function\CustomScoreProvider.cs" />
     <Compile Include="Search\Function\CustomScoreQuery.cs" />
     <Compile Include="Search\Function\DocValues.cs" />
     <Compile Include="Search\Function\FieldCacheSource.cs" />
