--- a/C#/contrib/FastVectorHighlighter.Net/FastVectorHighlighter.Net/FastVectorHighlighter.Net.csproj
+++ b/C#/contrib/FastVectorHighlighter.Net/FastVectorHighlighter.Net/FastVectorHighlighter.Net.csproj
@@ -36,7 +36,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;LUCENENET_350</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -44,7 +44,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;LUCENENET_350</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -71,6 +71,7 @@
     <Compile Include="SimpleFragListBuilder.cs" />
     <Compile Include="SimpleFragmentsBuilder.cs" />
     <Compile Include="Support.cs" />
+    <Compile Include="VectorHighlightMapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="package.html" />
