[LUCENENET-430] Contrib.ChainedFilter
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net/branches/Lucene.Net_2_9_4g@1143702 13f79535-47bb-0310-9956-ffa450edef68

Conflicts:

	test/contrib/Analyzers/Contrib.Analyzers.Test.csproj

--- a/test/contrib/Analyzers/Contrib.Analyzers.Test.csproj
+++ b/test/contrib/Analyzers/Contrib.Analyzers.Test.csproj
@@ -85,6 +85,7 @@
     <Compile Include="AR\TestArabicAnalyzer.cs" />
     <Compile Include="AR\TestArabicNormalizationFilter.cs" />
     <Compile Include="AR\TestArabicStemFilter.cs" />
+    <Compile Include="Filters\ChainedFilterTest.cs" />
     <Compile Include="Miscellaneous\TestPrefixAndSuffixAwareTokenFilter.cs" />
     <Compile Include="Miscellaneous\TestPrefixAwareTokenFilter.cs" />
     <Compile Include="NGram\TestEdgeNGramTokenFilter.cs" />
