--- a/branches/Lucene.Net_4e/src/Lucene.Net/Lucene.Net.csproj
+++ b/branches/Lucene.Net_4e/src/Lucene.Net/Lucene.Net.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Util\AttributeSourceState.cs" />
     <Compile Include="Util\BytesRef.cs" />
     <Compile Include="Util\CharsRef.cs" />
+    <Compile Include="Util\HashCodeUtil.cs" />
     <Compile Include="Util\IAttribute.cs" />
     <Compile Include="Util\RamUsageEstimator.cs" />
     <Compile Include="Util\UnicodeUtil.cs" />
