adding CharStream and CharReader classes
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@1165383 13f79535-47bb-0310-9956-ffa450edef68

--- a/branches/Lucene.Net_4e/src/Lucene.Net/Lucene.Net.csproj
+++ b/branches/Lucene.Net_4e/src/Lucene.Net/Lucene.Net.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Analysis\Analyzer.cs" />
+    <Compile Include="Analysis\CharReader.cs" />
+    <Compile Include="Analysis\CharStream.cs" />
     <Compile Include="Analysis\Token.cs" />
     <Compile Include="Analysis\TokenAttributes\CharTermAttribute.cs" />
     <Compile Include="Analysis\TokenAttributes\ICharTermAttribute.cs" />
