adding the initial first pass at the abstract Tokenizer class
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@1165385 13f79535-47bb-0310-9956-ffa450edef68

--- a/branches/Lucene.Net_4e/src/Lucene.Net/Lucene.Net.csproj
+++ b/branches/Lucene.Net_4e/src/Lucene.Net/Lucene.Net.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Analysis\TokenAttributes\PayloadAttribute.cs" />
     <Compile Include="Analysis\TokenAttributes\PositionIncrementAttribute.cs" />
     <Compile Include="Analysis\TokenAttributes\TypeAttribute.cs" />
+    <Compile Include="Analysis\Tokenizer.cs" />
     <Compile Include="Analysis\TokenStream.cs" />
     <Compile Include="Index\DocsAndPositionEnumerator.cs" />
     <Compile Include="Index\Payload.cs" />
