--- a/branches/Lucene.Net_4e/src/Lucene.Net/Lucene.Net.csproj
+++ b/branches/Lucene.Net_4e/src/Lucene.Net/Lucene.Net.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Analysis\Analyzer.cs" />
     <Compile Include="Analysis\CharReader.cs" />
     <Compile Include="Analysis\CharStream.cs" />
+    <Compile Include="Analysis\ReusableAnalyzerBase.cs" />
     <Compile Include="Analysis\Token.cs" />
     <Compile Include="Analysis\TokenAttributes\CharTermAttribute.cs" />
     <Compile Include="Analysis\TokenAttributes\ICharTermAttribute.cs" />
