--- a/branches/Lucene.Net_4e/src/Lucene.Net/Lucene.Net.csproj
+++ b/branches/Lucene.Net_4e/src/Lucene.Net/Lucene.Net.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Analysis\TokenAttributes\PayloadAttribute.cs" />
     <Compile Include="Analysis\TokenAttributes\PositionIncrementAttribute.cs" />
     <Compile Include="Analysis\TokenAttributes\TypeAttribute.cs" />
+    <Compile Include="Analysis\TokenFilter.cs" />
     <Compile Include="Analysis\Tokenizer.cs" />
     <Compile Include="Analysis\TokenStream.cs" />
     <Compile Include="Index\DocsAndPositionEnumerator.cs" />
