--- a/test/contrib/Spatial/Contrib.Spatial.Test.csproj
+++ b/test/contrib/Spatial/Contrib.Spatial.Test.csproj
@@ -77,6 +77,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\src\contrib\Analyzers\Filters\ChainedFilter.cs">
+      <Link>ChainedFilter.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestCartesian.cs" />
     <Compile Include="Various.cs" />
