--- a/src/contrib/Spatial/Contrib.Spatial.csproj
+++ b/src/contrib/Spatial/Contrib.Spatial.csproj
@@ -85,42 +85,13 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GeoHash\GeoHashDistanceFilter.cs" />
-    <Compile Include="GeoHash\GeoHashUtils.cs" />
-    <Compile Include="Geometry\CartesianPoint.cs" />
-    <Compile Include="Geometry\DistanceUnits.cs" />
-    <Compile Include="Geometry\FixedLatLng.cs" />
-    <Compile Include="Geometry\FloatLatLng.cs" />
-    <Compile Include="Geometry\LatLng.cs" />
-    <Compile Include="Geometry\Shape\Ellipse.cs" />
-    <Compile Include="Geometry\Shape\IGeometry2D.cs" />
-    <Compile Include="Geometry\Shape\IntersectCase.cs" />
-    <Compile Include="Geometry\Shape\LineSegment.cs" />
-    <Compile Include="Geometry\Shape\LLRect.cs" />
-    <Compile Include="Geometry\Shape\Point2D.cs" />
-    <Compile Include="Geometry\Shape\Rectangle.cs" />
-    <Compile Include="Geometry\Shape\Vector2D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tier\CartesianPolyFilterBuilder.cs" />
-    <Compile Include="Tier\CartesianShapeFilter.cs" />
-    <Compile Include="Tier\DistanceFieldComparatorSource.cs" />
-    <Compile Include="Tier\DistanceFilter.cs" />
-    <Compile Include="Tier\DistanceHandler.cs" />
-    <Compile Include="Tier\DistanceQueryBuilder.cs" />
-    <Compile Include="Tier\DistanceUtils.cs" />
-    <Compile Include="Tier\LatLongDistanceFilter.cs" />
-    <Compile Include="Tier\Projectors\CartesianTierPlotter.cs" />
-    <Compile Include="Tier\Projectors\IProjector.cs" />
-    <Compile Include="Tier\Projectors\SinusoidalProjector.cs" />
-    <Compile Include="Tier\Shape.cs" />
-    <Compile Include="Utils\BitwiseHelper.cs" />
-    <Compile Include="Utils\MathHelper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Overview.html" />
-    <Content Include="Tier\Package.html" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\Projects\spatial4n\Spatial4n.Core\Spatial4n.Core.csproj">
+      <Project>{777904AC-46EF-466C-9E13-2A52A6735987}</Project>
+      <Name>Spatial4n.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\core\Lucene.Net.csproj">
       <Project>{5D4AD9BE-1FFB-41AB-9943-25737971BF57}</Project>
       <Name>Lucene.Net</Name>
