--- a/src/contrib/Spatial/Contrib.Spatial.csproj
+++ b/src/contrib/Spatial/Contrib.Spatial.csproj
@@ -85,14 +85,18 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Prefix\PointPrefixTreeFieldCacheProvider.cs" />
     <Compile Include="Prefix\Tree\Node.cs" />
     <Compile Include="Prefix\Tree\SpatialPrefixTree.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleSpatialFieldInfo.cs" />
     <Compile Include="SpatialFieldInfo.cs" />
     <Compile Include="SpatialStrategy.cs" />
+    <Compile Include="Util\CachedDistanceValueSource.cs" />
+    <Compile Include="Util\CachingDoubleValueSource.cs" />
     <Compile Include="Util\NumericFieldInfo.cs" />
     <Compile Include="Util\ShapeFieldCache.cs" />
+    <Compile Include="Util\ShapeFieldCacheProvider.cs" />
     <Compile Include="Util\StringListTokenizer.cs" />
     <Compile Include="Util\TermsEnumCompatibility.cs" />
     <Compile Include="Util\TruncateFilter.cs" />
