--- a/src/contrib/Spatial/Contrib.Spatial.csproj
+++ b/src/contrib/Spatial/Contrib.Spatial.csproj
@@ -89,8 +89,11 @@
     <Compile Include="Prefix\PrefixTreeStrategy.cs" />
     <Compile Include="Prefix\RecursivePrefixTreeFilter.cs" />
     <Compile Include="Prefix\RecursivePrefixTreeStrategy.cs" />
+    <Compile Include="Prefix\Tree\GeohashPrefixTree.cs" />
     <Compile Include="Prefix\Tree\Node.cs" />
+    <Compile Include="Prefix\Tree\QuadPrefixTree.cs" />
     <Compile Include="Prefix\Tree\SpatialPrefixTree.cs" />
+    <Compile Include="Prefix\Tree\SpatialPrefixTreeFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleSpatialFieldInfo.cs" />
     <Compile Include="SpatialFieldInfo.cs" />
