--- a/src/contrib/Spatial/Contrib.Spatial.csproj
+++ b/src/contrib/Spatial/Contrib.Spatial.csproj
@@ -100,11 +100,14 @@
     <Compile Include="SimpleSpatialFieldInfo.cs" />
     <Compile Include="SpatialFieldInfo.cs" />
     <Compile Include="SpatialStrategy.cs" />
+    <Compile Include="Util\Bits.cs" />
     <Compile Include="Util\CachedDistanceValueSource.cs" />
     <Compile Include="Util\CachingDoubleValueSource.cs" />
     <Compile Include="Util\CompatibilityExtensions.cs" />
+    <Compile Include="Util\FixedBitSet.cs" />
     <Compile Include="Util\FunctionQuery.cs" />
     <Compile Include="Util\NumericFieldInfo.cs" />
+    <Compile Include="Util\OpenBitSetIterator.cs" />
     <Compile Include="Util\ShapeFieldCache.cs" />
     <Compile Include="Util\ShapeFieldCacheProvider.cs" />
     <Compile Include="Util\StringListTokenizer.cs" />
