--- a/test/contrib/Spatial/Contrib.Spatial.Test.csproj
+++ b/test/contrib/Spatial/Contrib.Spatial.Test.csproj
@@ -80,9 +80,12 @@
     <Compile Include="..\..\..\src\contrib\Analyzers\Filters\ChainedFilter.cs">
       <Link>ChainedFilter.cs</Link>
     </Compile>
+    <Compile Include="..\..\core\Util\LuceneTestCase.cs">
+      <Link>LuceneTestCase.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestCartesian.cs" />
-    <Compile Include="Various.cs" />
+    <Compile Include="SpatialTestCase.cs" />
+    <Compile Include="TestTestFramework.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
@@ -115,6 +118,10 @@
       <Project>{5D4AD9BE-1FFB-41AB-9943-25737971BF57}</Project>
       <Name>Lucene.Net</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Prefix\Tree\" />
+    <Folder Include="Vector\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
