--- a/test/contrib/Spatial/Contrib.Spatial.Test.csproj
+++ b/test/contrib/Spatial/Contrib.Spatial.Test.csproj
@@ -84,7 +84,10 @@
       <Link>LuceneTestCase.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpatialMatchConcern.cs" />
     <Compile Include="SpatialTestCase.cs" />
+    <Compile Include="SpatialTestQuery.cs" />
+    <Compile Include="StrategyTestCase.cs" />
     <Compile Include="TestTestFramework.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -110,6 +113,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\Projects\spatial4n\Spatial4n.Core\Spatial4n.Core.csproj">
+      <Project>{777904AC-46EF-466C-9E13-2A52A6735987}</Project>
+      <Name>Spatial4n.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\src\contrib\Spatial\Contrib.Spatial.csproj">
       <Project>{35C347F4-24B2-4BE5-8117-A0E3001551CE}</Project>
       <Name>Contrib.Spatial</Name>
