--- a/test/contrib/Spatial/Contrib.Spatial.Test.csproj
+++ b/test/contrib/Spatial/Contrib.Spatial.Test.csproj
@@ -83,6 +83,9 @@
     <Compile Include="..\..\core\Util\LuceneTestCase.cs">
       <Link>LuceneTestCase.cs</Link>
     </Compile>
+    <Compile Include="..\..\core\Util\Paths.cs">
+      <Link>Paths.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpatialMatchConcern.cs" />
     <Compile Include="SpatialTestCase.cs" />
