--- a/test/contrib/Spatial/Contrib.Spatial.Tests.csproj
+++ b/test/contrib/Spatial/Contrib.Spatial.Tests.csproj
@@ -156,9 +156,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\contrib\Spatial\Contrib.Spatial.csproj">
-      <Project>{35C347F4-24B2-4BE5-8117-A0E3001551CE}</Project>
-      <Name>Contrib.Spatial</Name>
+    <ProjectReference Include="..\..\..\src\contrib\Spatial\Contrib.Spatial.NTS.csproj">
+      <Project>{02d030d0-c7b5-4561-8bdd-41408b2e2f41}</Project>
+      <Name>Contrib.Spatial.NTS</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\src\core\Lucene.Net.csproj">
       <Project>{5D4AD9BE-1FFB-41AB-9943-25737971BF57}</Project>
