--- a/src/contrib/Spatial/Contrib.Spatial.csproj
+++ b/src/contrib/Spatial/Contrib.Spatial.csproj
@@ -127,6 +127,7 @@
     <Compile Include="BBox\BBoxSimilarity.cs" />
     <Compile Include="BBox\BBoxSimilarityValueSource.cs" />
     <Compile Include="BBox\BBoxStrategy.cs" />
+    <Compile Include="BBox\DistanceSimilarity.cs" />
     <Compile Include="Prefix\PointPrefixTreeFieldCacheProvider.cs" />
     <Compile Include="Prefix\PrefixTreeStrategy.cs" />
     <Compile Include="Prefix\RecursivePrefixTreeFilter.cs" />
@@ -144,6 +145,7 @@
     <Compile Include="Queries\UnsupportedSpatialOperation.cs" />
     <Compile Include="SpatialStrategy.cs" />
     <Compile Include="Util\Bits.cs" />
+    <Compile Include="Util\ReciprocalFloatFunction.cs" />
     <Compile Include="Util\ShapeFieldCacheDistanceValueSource.cs" />
     <Compile Include="Util\CachingDoubleValueSource.cs" />
     <Compile Include="Util\CompatibilityExtensions.cs" />
