LUCENE-4374 Rename TwoDoubles to PointVector
git-svn-id: https://svn.apache.org/repos/asf/lucene.net/trunk@1388987 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/contrib/Spatial/Contrib.Spatial.NTS.csproj
+++ b/src/contrib/Spatial/Contrib.Spatial.NTS.csproj
@@ -157,7 +157,7 @@
     <Compile Include="Util\TermsFilter.cs" />
     <Compile Include="Util\ValueSourceFilter.cs" />
     <Compile Include="Vector\DistanceValueSource.cs" />
-    <Compile Include="Vector\TwoDoublesStrategy.cs" />
+    <Compile Include="Vector\PointVectorStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\core\Lucene.Net.csproj">
