Partial port of LUCENE-4444 , plus one passing test of using LineString
git-svn-id: https://svn.apache.org/repos/asf/lucene.net/trunk@1405531 13f79535-47bb-0310-9956-ffa450edef68

--- a/test/contrib/Spatial/Contrib.Spatial.Tests.csproj
+++ b/test/contrib/Spatial/Contrib.Spatial.Tests.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Compatibility\TermsFilterTest.cs" />
     <Compile Include="DistanceStrategyTest.cs" />
     <Compile Include="PortedSolr3Test.cs" />
+    <Compile Include="Prefix\NtsPolygonTest.cs" />
     <Compile Include="Prefix\TestRecursivePrefixTreeStrategy.cs" />
     <Compile Include="Prefix\TestTermQueryPrefixGridStrategy.cs" />
     <Compile Include="Prefix\Tree\SpatialPrefixTreeTest.cs" />
