--- a/src/demo/Demo.Common/Demo.Common.csproj
+++ b/src/demo/Demo.Common/Demo.Common.csproj
@@ -62,7 +62,7 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <Framework>$(TargetFrameworkVersion.Replace("v", "NET").Replace(".", ""))</Framework>
     <OutputPath>..\..\..\build\bin\demo\Demo.Common\$(Configuration.Replace("35", ""))\$(Framework)\</OutputPath>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <BaseAddress>285212672</BaseAddress>
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <ConfigurationOverrideFile></ConfigurationOverrideFile>
@@ -85,7 +85,7 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <Framework>$(TargetFrameworkVersion.Replace("v", "NET").Replace(".", ""))</Framework>
     <OutputPath>..\..\..\build\bin\demo\Demo.Common\$(Configuration.Replace("35", ""))\$(Framework)\</OutputPath>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <BaseAddress>285212672</BaseAddress>
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <ConfigurationOverrideFile></ConfigurationOverrideFile>
@@ -108,7 +108,7 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <Framework>$(TargetFrameworkVersion.Replace("v", "NET").Replace(".", ""))</Framework>
     <OutputPath>..\..\..\build\bin\demo\Demo.Common\$(Configuration.Replace("35", ""))\$(Framework)\</OutputPath>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <BaseAddress>285212672</BaseAddress>
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <ConfigurationOverrideFile></ConfigurationOverrideFile>
@@ -131,7 +131,7 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <Framework>$(TargetFrameworkVersion.Replace("v", "NET").Replace(".", ""))</Framework>
     <OutputPath>..\..\..\build\bin\demo\Demo.Common\$(Configuration.Replace("35", ""))\$(Framework)\</OutputPath>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <BaseAddress>285212672</BaseAddress>
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <ConfigurationOverrideFile></ConfigurationOverrideFile>
