--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -836,6 +836,7 @@
     <Compile Include="Util\ArrayUtil.cs" />
     <Compile Include="Util\Bits.cs" />
     <Compile Include="Util\ByteBlockPool.cs" />
+    <Compile Include="Util\BytesRefHash.cs" />
     <Compile Include="Util\Counter.cs" />
     <Compile Include="Util\IBits.cs" />
     <Compile Include="Util\BytesRef.cs" />
