--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -840,6 +840,7 @@
     <Compile Include="Util\CollectionUtil.cs" />
     <Compile Include="Util\CommandLineUtil.cs" />
     <Compile Include="Util\Counter.cs" />
+    <Compile Include="Util\DoubleBarrelLRUCache.cs" />
     <Compile Include="Util\IBits.cs" />
     <Compile Include="Util\BytesRef.cs" />
     <Compile Include="Util\CharsRef.cs" />
