--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -841,6 +841,8 @@
     <Compile Include="Util\CommandLineUtil.cs" />
     <Compile Include="Util\Counter.cs" />
     <Compile Include="Util\DoubleBarrelLRUCache.cs" />
+    <Compile Include="Util\FilterIterator.cs" />
+    <Compile Include="Util\FixedBitSet.cs" />
     <Compile Include="Util\IBits.cs" />
     <Compile Include="Util\BytesRef.cs" />
     <Compile Include="Util\CharsRef.cs" />
